k8s/hello-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello
  namespace: default
  labels:
    app: hello
spec:
  selector:
    app: hello
  ports:
    - protocol: TCP
      port: 8080
      #nodePort: 30074
  type: NodePort
